# truffle-autoresearch

./: .deploy-service  .gitignore  .gitmodules  README.md  pyproject.toml
src/truffle_autoresearch/: __init__.py  cli.py
src/truffle_autoresearch/config/: __init__.py  fleet.py  paths.py  target.py
src/truffle_autoresearch/dashboard/: __init__.py
src/truffle_autoresearch/fleet/: __init__.py  discovery.py  init_wizard.py  ssh.py
src/truffle_autoresearch/loop/: __init__.py  __main__.py  cli_entry.py  git.py  results.py  runner.py
src/truffle_autoresearch/server/: __init__.py  app.py  executor.py  results.py  run.py
src/truffle_autoresearch/targets/: __init__.py  loader.py
src/truffle_autoresearch/targets/builtin/: __init__.py
src/truffle_autoresearch/truffle/: __init__.py  deployer.py
v1-initial-experimentation/: .env.example  EXPERIMENT_SUMMARY.md  README.md  autoresearch_loop.sh  sync_results.sh  truffle-docs-map.md
v1-initial-experimentation/control-server/: README.md  requirements.txt  run.sh  server.py
v1-initial-experimentation/dashboard/: README.md  index.html  package-lock.json  package.json
v1-initial-experimentation/dashboard/src/: App.css  App.jsx  api.js
v1-initial-experimentation/dashboard/src/components/: ControlPanel.jsx  FleetStatusCards.jsx  Header.jsx  LogViewer.jsx  TrajectoryChart.jsx  TrufflePanel.jsx
v1-initial-experimentation/results/: 3080-results.tsv  4090-results.tsv
v1-initial-experimentation/truffle-app/: config.py  coordinator_background.py  coordinator_foreground.py  data_reader.py  truffile.yaml
(+5 files in other folders)
